[gd_scene load_steps=4 format=3 uid="uid://cyqjkrx3h7plo"]

[ext_resource type="Script" path="res://scenes/commons/items/item.gd" id="1_05omo"]
[ext_resource type="Texture2D" uid="uid://dinkwqiruynu1" path="res://assets/images/commons/items/Bow.png" id="2_kxseb"]
[ext_resource type="PackedScene" uid="uid://8q6gm7o444bp" path="res://scenes/commons/items/pickup_area.tscn" id="3_74ek1"]

[node name="Item" type="Node2D" groups=["Items"]]
script = ExtResource("1_05omo")
item_id = "a"
item_texture = ExtResource("2_kxseb")

[node name="ItemSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_kxseb")

[node name="PickupArea" parent="." instance=ExtResource("3_74ek1")]

[connection signal="body_entered" from="PickupArea" to="." method="_on_pickup_area_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_pickup_area_body_exited"]
